tests/positive/Isabelle/N.juvix
module N;

import Stdlib.Prelude open;

g (a : Nat) : Nat := a * 2;
